--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "@iconify/react": "^5.0.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@storybook/addon-backgrounds": "^8.2.9",
+    "@storybook/addon-controls": "^8.2.9",
+    "@storybook/addon-themes": "^8.2.9",
+    "@storybook/addon-viewport": "^8.2.9",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
